--- a/NineMensMorris/app/src/main/res/values/strings.xml
+++ b/NineMensMorris/app/src/main/res/values/strings.xml
@@ -3,14 +3,14 @@
     <string name="action_settings">Settings</string>
 
     <string name="button1" />
-    <string name="button2"></string>
-    <string name="button3"></string>
-    <string name="button4"></string>
-    <string name="button5"></string>
-    <string name="button6"></string>
-    <string name="button7"></string>
-    <string name="button8"></string>
-    <string name="button9"></string>
+    <string name="button2" />
+    <string name="button3" />
+    <string name="button4" />
+    <string name="button5" />
+    <string name="button6" />
+    <string name="button7" />
+    <string name="button8" />
+    <string name="button9" />
     <string name="button10" />
     <string name="button11" />
     <string name="imageView" />
@@ -27,7 +27,8 @@
     <string name="button22" />
     <string name="button23" />
     <string name="button24" />
-    <string name="button25" />
     <string name="testButton1">Test Button 1</string>
     <string name="testButton2">Test Button 2</string>
+    <string name="numberOfPiecesPlayer1">9</string>
+    <string name="numberOfPiecesPlayer2">9</string>
 </resources>
