Placement and Movement working

--- a/NineMensMorris/app/src/main/res/values/strings.xml
+++ b/NineMensMorris/app/src/main/res/values/strings.xml
@@ -32,4 +32,6 @@
     <string name="numberOfPiecesPlayer1">9</string>
     <string name="numberOfPiecesPlayer2">9</string>
     <string name="playerActivity">Player?</string>
+    <string name="aktiver_spieler">Aktiver Spieler</string>
+    <string name="zustand">Zustand</string>
 </resources>
